Fixed pocket creation modal aligment issue by having all pockets be display:inline-block and setting #modal to overflow-y:hidden and #pocketbook-field to overflow-y:scroll

--- a/client/src/components/Modal/style.css
+++ b/client/src/components/Modal/style.css
@@ -18,6 +18,7 @@
     max-height:515px;
     min-height:365px;
 
+    overflow-y: hidden;
     padding:15px;
     text-align:center;
     background:linear-gradient(rgb(103, 73, 64), rgb(76, 51, 46));
@@ -159,7 +160,7 @@
 #pocketbook-field {
     overflow-y: scroll;
     height:350px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
 }
 
 @media only screen and (max-height: 400px) {
