--- a/client/src/components/Pocket/style.css
+++ b/client/src/components/Pocket/style.css
@@ -9,6 +9,7 @@
     overflow:hidden;
     margin:5px;
     position:relative;
+    display:inline-block;
 }
 
 .pocket h1, .pocket h2 {
